// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructNewLiveOrder ask 1`] = `
Object {
  "account": "makerAddress",
  "amount": 122,
  "balance": 122,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "makerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "makerCode|takerCode",
  "price": 0.2675438596491228,
  "side": "ask",
}
`;

exports[`constructNewLiveOrder bid 1`] = `
Object {
  "account": "makerAddress",
  "amount": 457,
  "balance": 457,
  "createdAt": 1234567890,
  "currentSequence": 0,
  "expiry": 1234567890000,
  "fee": 1,
  "feeAsset": "takerCode",
  "fill": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "takerCode|makerCode",
  "price": 3.7154471544715446,
  "side": "bid",
}
`;

exports[`getPriceBeforeFee ask base flat 1`] = `
Object {
  "amount": 123,
  "feeAmount": 1,
  "price": 0.26914660831509846,
}
`;

exports[`getPriceBeforeFee ask base ratio 1`] = `
Object {
  "amount": 123,
  "feeAmount": 4.606060606060606,
  "price": 0.2670394736842105,
}
`;

exports[`getPriceBeforeFee ask flat 1`] = `
Object {
  "amount": 122,
  "feeAmount": 1,
  "price": 0.2675438596491228,
}
`;

exports[`getPriceBeforeFee ask ratio 1`] = `
Object {
  "amount": 121.78217821782178,
  "feeAmount": 1.2178217821782178,
  "price": 0.2670661803022407,
}
`;

exports[`getPriceBeforeFee bid base flat 1`] = `
Object {
  "amount": 123,
  "feeAmount": 1,
  "price": 0.2703296703296703,
}
`;

exports[`getPriceBeforeFee bid base ratio 1`] = `
Object {
  "amount": 123,
  "feeAmount": 4.514851485148515,
  "price": 0.2724342105263158,
}
`;

exports[`getPriceBeforeFee bid flat 1`] = `
Object {
  "amount": 124,
  "feeAmount": 1,
  "price": 0.2719298245614035,
}
`;

exports[`getPriceBeforeFee bid ratio 1`] = `
Object {
  "amount": 124.24242424242425,
  "feeAmount": 1.2424242424242424,
  "price": 0.272461456671983,
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123000000000000000000",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456000000000000000000",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;
